syntax = "proto3";

option csharp_namespace = "ProjectServiceProto";

package project_service;

import "google/protobuf/timestamp.proto";

service ProjectService {
    rpc CreateProject(CreateProjectRequest) returns (ProjectResponse);
    rpc GetProject(GetProjectRequest) returns (ProjectResponse);
    rpc UpdateProject(UpdateProjectRequest) returns (ProjectResponse);
    rpc DeleteProject(DeleteProjectRequest) returns (Response);
    rpc ListProjects(ListProjectsRequest) returns (ListProjectsResponse);
    rpc AddParticipant(AddParticipantRequest) returns (Response);
    rpc RemoveParticipant(RemoveParticipantRequest) returns (Response);
}

message Project {
    string id = 1;
    string name = 2;
    string description = 3;
    string ownerId = 4;
    repeated string participantIds = 5;
    google.protobuf.Timestamp createdAt = 6;
    google.protobuf.Timestamp updatedAt = 7;
}

message CreateProjectRequest {
    string name = 1;
    string description = 2;
    string ownerId = 3;
    repeated string participantIds = 4;
}

message GetProjectRequest {
    string id = 1;
}

message UpdateProjectRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    repeated string participantIds = 4;
}

message DeleteProjectRequest {
    string id = 1;
}

message ListProjectsRequest {
    string ownerId = 1;
    repeated string participantIds = 2;
}

message AddParticipantRequest {
    string projectId = 1;
    string userId = 2;
}

message RemoveParticipantRequest {
    string projectId = 1;
    string userId = 2;
}

message ProjectResponse {
    Project project = 1;
}

message ListProjectsResponse {
    repeated Project projects = 1;
}

message Response {
    string message = 1;
    bool success = 2;
}